# Super-crawlbase

./: .gitignore  CAMBIOS_PERFIL_DEMO.md  INSTRUCCIONES_INICIO.md  INSTRUCCIONES_REINICIO.md  README.md  RESUMEN_MEJORAS.md  RESUMEN_SOLUCION_PERFIL.md  SOLUCION_CARGA_PERFIL.md
backend/: README.md  pyproject.toml  test_scrapers.py
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  router.py  service.py
backend/app/cli/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/crawlbase/: __init__.py  client.py
backend/app/crawlbase_desktop_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/docs/: __init__.py  catalog.py  router.py  service.py
backend/app/link_factory/: __init__.py  presets.py  router.py  service.py
backend/app/profiles/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/projects/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/scrapers/: __init__.py  router.py  schemas.py  service.py
backend/app/settings/: __init__.py
backend/app/tasks/: __init__.py
backend/output/: scraping_20251113_234824.xlsx  scraping_20251113_235519.xlsx
backend/seed_data/: primer_perfil.json
backend/tests/: test_analytics_service.py  test_dashboard_cache.py  test_docs_catalog.py  test_docs_router.py  test_link_factory.py  test_profiles_seed.py  test_projects_schema.py
docs/: arquitectura.md
frontend/: ESTADO_INSTALACION.md  INSTALL.md  README.md  RESUMEN_CORRECCIONES.md  SOLUCION_PROBLEMAS.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  (+3 more)
(+26 files in other folders)
